Add image caching and configuration support